Fixed alignment of the selection controller

--- a/src/main/resources/assets/styles/view/application-browse-panel.less
+++ b/src/main/resources/assets/styles/view/application-browse-panel.less
@@ -29,14 +29,25 @@
 
   .tree-grid-toolbar {
     margin-top: 0;
-
-    .selection-controller {
-      padding-left: 11px;
-    }
   }
 
   .applications-list-box-wrapper {
     overflow: auto;
     height: calc(100% - 40px); // minus toolbar height
+  }
+}
+
+body {
+  &._0-240,
+  &._240-360,
+  &._360-540,
+  &._540-720 {
+    .applications-grid-list {
+      .item-view-wrapper {
+        &.checkbox-left {
+          .checkbox-right();
+        }
+      }
+    }
   }
 }
